added required attributes to name,email, and one date for sign up page

--- a/sign-up.html
+++ b/sign-up.html
@@ -51,14 +51,14 @@
 								<form method="post" action="#">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
-											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name*" required />
 										</div>
 										<div class="col-6 col-12-xsmall">
-											<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+											<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email*" required />
 										</div>
 										<!-- Break -->
 										<div class="col-12">
-											<select name="classSelect" id="ClassSelect">
+											<select name="classSelect" id="ClassSelect" required>
 												<option value="">- Select a class/workshop -</option>
 												<option value="1">Class: Digital Venturing through Generative AI</option>
 												<option value="1">Class: What’s new about DAOS</option>
@@ -67,10 +67,10 @@
 										</div>
 										<!-- Break -->
 										<div id="signUpDates">
-											<p>Please provide some approximate dates that work for you. We will work to schedule you in the closest available offering:</p>
+											<p>Please provide some approximate dates that work for you. We will work to schedule you in the closest available offering: </p>
 											<div class="dates">
 												<div class="half">
-													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')">
+													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')" required>
 													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')">
 												</div>
 												<div class="half">
