added netlify attribute for forms

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="inner">
 						<section>
 							<h3>CONTACT US</h3>
-							<form method="post" action="#">
+							<form method="post" action="#" netlify>
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -183,6 +183,7 @@
 										<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 									</ul>
+								</div>
 							</section>
 						</section>
 					</div>
