--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="inner">
 						<section>
 							<h3>CONTACT US</h3>
-							<form method="post" action="#" netlify>
+							<form name="contact" method="POST" data-netlify="true">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
