--- a/sign-up.html
+++ b/sign-up.html
@@ -48,7 +48,7 @@
 							<section id="form">
 								<h3>Sign Up</h3>
 
-								<form method="post" action="#" netlify>
+								<form name='sign-up' method="post" data-netlify="true">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
 											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name*" required />
