removed ending puctuation from ending of intro to pages, added missed link to font on about page

--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
 		
 	</head>
 	<body class="is-preload">
@@ -55,7 +58,7 @@
 								<h1>About Us</h1>
 							</header>
 							<div class="content">
-								<p><p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transform their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies.</p>
+								<p><p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transform their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies</p>
 							</div>
 						</div>
 					</section>
