--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
 								<h1>Research</h1>
 							</header>
 							<div class="content">
-								<p>Below is a list of research that we’ve published or sponsored. We have more research projects in progress. Some of this work examines strategies for deploying AI capabilities across the value chain. Other other work considers ways of organizing knowledge work inside the firm to maximize the innovative potential of generative AI tools.</p>
+								<p>Below is a list of research that we’ve published or sponsored. We have more research projects in progress. Some of this work examines strategies for deploying AI capabilities across the value chain. Other other work considers ways of organizing knowledge work inside the firm to maximize the innovative potential of generative AI tools</p>
 							</div>
 						</div>
 					</section>
