--- a/workshops.html
+++ b/workshops.html
@@ -56,7 +56,7 @@
 								<h1>Workshops</h1>
 							</header>
 							<div class="content">
-								<p>These classes use DAOs as the technological context to explore the broader topic of decentralize organizing. DOAs (decentralized autonomous organizations) are alliances between independent actors where critical governance and operational decisions are decided through decentralized decision-making processes and executed automatically using smart contracts. DAOs take on features of better studied organizational forms such as open-source communities and technological ecosystems, but with cryptographic governance as their unique foundation. These courses to address the organization considerations emerging from that technological gestalt.</p>
+								<p>These classes use DAOs as the technological context to explore the broader topic of decentralize organizing. DOAs (decentralized autonomous organizations) are alliances between independent actors where critical governance and operational decisions are decided through decentralized decision-making processes and executed automatically using smart contracts. DAOs take on features of better studied organizational forms such as open-source communities and technological ecosystems, but with cryptographic governance as their unique foundation. These courses to address the organization considerations emerging from that technological gestalt</p>
 							</div>
 						</div>
 					</section>
