added meta description tags on each page and some minor punctuation changes.

--- a/class-whats-new-about-daos.html
+++ b/class-whats-new-about-daos.html
@@ -8,7 +8,8 @@
 	<head>
 		<title>Eola Arts Incubator</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Class by Eola Arts Incubator to learn how decentralized autonomous organizations create value">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
