--- a/classes.html
+++ b/classes.html
@@ -8,7 +8,8 @@
 	<head>
 		<title>Eola Arts Incubator</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="List of classes offered by Eola Arts Incubator">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,7 +83,7 @@
 											<header class="major">
 												<h3>Class: Digital Venturing through Generative AI</h3>
 											</header>
-											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI. The course asks students to identify and analyze a market opportunity that uses generative AI in it is core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
+											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI. The course asks students to identify and analyze a market opportunity that uses generative AI in its core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
 
 												The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
 											<ul class="actions">
