--- a/research-paper-competitve-advantage-from-ai.html
+++ b/research-paper-competitve-advantage-from-ai.html
@@ -8,7 +8,8 @@
 	<head>
 		<title>Eola Arts Incubator</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Research paper by Dr.Kemp named 'Competitive Advantage from Artificial Intelligence: Toward a Theory of Situated AI.” Academy of Management Review.' ">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
