--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -8,7 +8,8 @@
 	<head>
 		<title>Eola Arts Incubator</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Class by Eola Arts to identify and analyze a market opportunity that uses generative AI in its core capabilities.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
