--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 								</div>
 								<div class="inner">
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in" aria-label="LinkedIn"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li>
 									</ul>
 								</div>
 							</section>
