aligned social media links with phone number and email links in the CTA form

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Email</h3>
-									<a href="#">ayenda@eolaarts.com</a>
+									<a href="mailto: ayenda@eolaarts.com">ayenda@eolaarts.com</a>
 								</div>
 							</section>
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-phone"></span>
 									<h3>Phone</h3>
-									<span>407-496-8171</span>
+									<a href="tel:407-496-8171">(407)-496-8171</a>
 								</div>
 							</section>
 							<section>
@@ -183,7 +183,7 @@
 									<h3>Social Media</h3>
 								</div>
 								<div class="inner">
-									<ul class="icons">
+									<ul class="icons spaceLeft">
 										<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in" aria-label="LinkedIn"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li>
 									</ul>
