added pdf folder for storing research documents and download links for mobile where iframes are converted to an image.

--- a/research-ai-and-generative-music-industry.html
+++ b/research-ai-and-generative-music-industry.html
@@ -62,7 +62,12 @@
 									<p>We have to thank Caleb, Chandler, Vidhi, Aditya, Eli, Marco, Joey. It was great working with you guys.</p>
 									<p>Thank you also to the executive team at CGVT for crafting a unique opportunity for us to work together again. This project was educational and fun. I’m honored.</p>
 								</div>
-								<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf#view=fitH" frameborder="0"></iframe>
+								<div class="module inner">
+									<ul class="alt">
+										<li><a href="./assets/pdf/CGVT-x-Eola-Arts-Final-Report.pdf" download target="_blank" class="button primary">Download Now</a></li>
+									</ul>
+								</div>
+								<iframe src="./assets/pdf/CGVT-x-Eola-Arts-Final-Report.pdf#view=fitH" frameborder="0"></iframe>
 							</div>
 						</section>
 
