--- a/research-paper-competitve-advantage-from-ai.html
+++ b/research-paper-competitve-advantage-from-ai.html
@@ -47,9 +47,15 @@
 					<div id="main" class="alt">
 
 						<!-- One -->
+						
 							<section id="one">
+								<div class=" inner module">
+									<ul class="alt">
+										<li><a href="./assets/pdf/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf" download target="_blank" class="button primary">Download Now</a></li>
+									</ul>
+								</div>
 								<div class="inner">
-									<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf#view=fitH" frameborder="0"></iframe>
+									<iframe src="./assets/pdf/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf#view=fitH" frameborder="0"></iframe>
 								</div>
 							</section>
 
