--- a/sign-up.html
+++ b/sign-up.html
@@ -87,7 +87,7 @@
 									
 											<!-- Break -->
 										<div class="col-12">
-											<textarea name="demo-message" id="message" placeholder="Additional information or questions?" rows="6"></textarea>
+											<textarea name="message" id="message" placeholder="Additional information or questions?" rows="6"></textarea>
 										</div>
 										<!-- Break -->
 										<div class="col-12">
