removed page with iframe for kemp 2023 article, replaced "learn more" button with download on workshop page

--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
 											</header>
 											<p>Author: Ayenda Kemp</p>
 											<ul class="actions">
-												<li><a href="research-paper-competitve-advantage-from-ai.html" class="button">Learn more</a></li>
+												<li><a href="./assets/pdf/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf" download target="_blank" class="button">Download now</a></li>
 											</ul>
 										</div>
 									</div>
