removed iframe from all research pages and added download now button for all on workshop page

--- a/research.html
+++ b/research.html
@@ -103,6 +103,7 @@
 											<p>Author: Consulting Group at Virginia Tech (at the request of Eola Arts Incubator)</p>
 											<ul class="actions">
 												<li><a href="research-ai-and-generative-music-industry.html" class="button">Learn more</a></li>
+												<li><a href="./assets/pdf/CGVT-x-Eola-Arts-Final-Report.pdf" download target="_blank" class="button">Download Now</a></li>
 											</ul>
 										</div>
 									</div>
