contact page link added to hamburger menu

--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
 
