wording changes to index titles and subtitles for workshops and classes. Removed class: and workshop: prefixes in respective pages

--- a/classes.html
+++ b/classes.html
@@ -86,7 +86,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Class: Digital Venturing through Generative AI</h3>
+												<h3>Digital Venturing through Generative AI</h3>
 											</header>
 											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI. The course asks students to identify and analyze a market opportunity that uses generative AI in its core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
 
@@ -102,7 +102,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Class: What’s new about DAOs?</h3>
+												<h3>What’s new about DAOs?</h3>
 											</header>
 											<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
 											<ul class="actions">
@@ -116,7 +116,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Class: Decentralized Cooperation and Coordination</h3>
+												<h3>Decentralized Cooperation and Coordination</h3>
 											</header>
 											<p>Organizations are technologies for solving cooperation problems (getting people with divergent interest to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
 											<ul class="actions">
