--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="classes.html">Classes</a></li>
-							<li><a href="workshops.html">DAO Workshops</a></li>
+							<li><a href="workshops.html">Workshops and Seminars</a></li>
 							<li><a href="about.html">About Us</a></li>
 							<li><a href="research.html">Research</a></li>
 							
@@ -79,7 +79,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="classes.html" class="link">Class</a></h3>
-										<p>Digital Venturing through Generative AI</p>
+										<p>Learn real world skills</p>
 									</header>
 								</article>
 								<article>
@@ -87,8 +87,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="workshops.html" class="link">Workshops</a></h3>
-										<p>Workshops and seminars</p>
+										<h3><a href="workshops.html" class="link">Workshops and Seminars</a></h3>
+										<p>Guest speakers, team exercises, and more</p>
 									</header>
 								</article>
 								<article>
