--- a/workshops.html
+++ b/workshops.html
@@ -86,7 +86,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Workshop: Managing (with) Intelligent Algorithms: Summer Workshop </h3>
+												<h3>Managing (with) Intelligent Algorithms: Summer Workshop </h3>
 											</header>
 											<p>This virtual workshop brings together scholars who are interested in advancing our understanding of how intelligent algorithms shift the nature of work, organizing, and strategy. This is a place to discuss new trends observed in practice and the new research making sense of those trends. Tell us about what you’re reading, what you’re writing, and what makes you excited about new organizational uses of intelligent algorithms. Scholars in all career stages and from all areas of study are invited to participate. </p>
 											<p>Wednesday’s 1 PM – 3 PM EST<br>
@@ -103,7 +103,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Workshop: Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations</h3>
+												<h3>Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations</h3>
 											</header>
 											<p>For this monthly speaker series, we invited a few scholars at the intersection of artificial intelligence and organizations to share an early-stage idea or working paper. During each meeting, one scholar will share their work and guide an open conversation about the new questions and implications born from</p>
 											<p>The final speaker list will be released in late summer, after the Academy of Management meetings. Join the guest list to stay informed. </p>
