added workshops and seminars to hamburger menu on all pages, removed DAOs class, added research foundations to class pages

--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -39,7 +39,7 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
-						<li><a href="workshops.html">DAO Workshops</a></li>
+						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="research.html">Research</a></li>
 						
@@ -61,7 +61,9 @@
 								<h1>Digital Venturing with Generative AI</h1>
 							</header>
 							<div class="content">
-								<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
+								<p> The course asks students to identify and analyze a market opportunity that uses generative AI in its core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
+
+									The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
 								<ul class="actions">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
@@ -159,6 +161,10 @@
 							</div>
 
 						</section>
+
+						<div class="module inner">
+							<p>Research Foundations: Allan Afuah, Ryan Allan, Jay Barney, Thomas Davenport, Samer Faraj, Giovanni Gavetti, Robert Gregory, Ayenda Kemp, Dan Levinthal, Alex Murray, Brain Pentland, Michael Porter, David Teece, Lauren Waardenburg.</p>
+						</div>
 
 						
 				</div>
