--- a/classes.html
+++ b/classes.html
@@ -39,7 +39,7 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
-						<li><a href="workshops.html">DAO Workshops</a></li>
+						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="research.html">Research</a></li>
 						
@@ -88,9 +88,7 @@
 											<header class="major">
 												<h3>Digital Venturing through Generative AI</h3>
 											</header>
-											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI. The course asks students to identify and analyze a market opportunity that uses generative AI in its core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
-
-												The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
+											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI.</p>
 											<ul class="actions">
 												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
@@ -98,7 +96,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+								<!-- <section>
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
@@ -111,7 +109,7 @@
 											</ul>
 										</div>
 									</div>
-								</section>
+								</section> -->
 								<section>
 									<div class="content classes">
 										<div class="inner">
