--- a/sign-up.html
+++ b/sign-up.html
@@ -38,7 +38,7 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
-						<li><a href="workshops.html">DAO Workshops</a></li>
+						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="research.html">Research</a></li>
 						
