changed subheading to about tab in index, changed Eola arts incubator to Eola Art Incubator on all pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong> 
+						<a href="index.html" class="logo"><strong>Eola Art Incubator</strong> 
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -97,7 +97,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="about.html" class="link">About Us</a></h3>
-										<p>Learn more about Eola Arts </p>
+										<p>Meet the minds behind Eola Art Incubator</p>
 									</header>
 								</article>
 								<article>
