--- a/research-ai-and-generative-music-industry.html
+++ b/research-ai-and-generative-music-industry.html
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong></a>
+						<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
