--- a/class-whats-new-about-daos.html
+++ b/class-whats-new-about-daos.html
@@ -28,7 +28,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 				<header id="header" class="alt style2">
-					<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong></a>
+					<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
