--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt style2">
-					<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong></a>
+					<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
