changed headshot image and added cv pdf download to about page. small wording change to intro of about page

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 								<h1>About Us</h1>
 							</header>
 							<div class="content">
-								<p><p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transform their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies</p>
+								<p>We examine the technology-organization interface in the context of artful organizing and art markets. These contexts demand that people creatively transform their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies</p>
 							</div>
 						</div>
 					</section>
@@ -76,7 +76,7 @@
 						<section id="one">
 							<div class="inner">
 								<div class="headshotContainer">
-									<img class="headshotImg" src="images/ayenda-headshot-plain" alt="" />
+									<img class="headshotImg" src="./images/ayenda-headshot-plain.jpg" alt="" />
 								</div>
 								<header class="major center">
 									<h2>Ayenda Kemp, PhD</h2>
@@ -88,6 +88,12 @@
 									<p>He also studies novel business models for structuring generative and collaborative creative work. His interested lies primarily in accomplishing this using new technologies such as generative AI and, and old technologies such as dancing. His work appears or is forthcoming in the Academy of Management Review and the Academy of Management Best Paper Proceedings. (Curriculum Vitae).</p>
 									<p>Prior to serving as the president of Eola Art’s Incubator, Ayenda served as tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
 								</div>
+							</div>
+
+							<div class="module inner">
+								<ul class="alt">
+									<li><a href="./assets/pdf/Ayenda-Kemp-CV.pdf" download target="_blank" class="button primary">Curriculum Vitae</a></li>
+								</ul>
 							</div>
 						</section>
 
